--- a/web/templates/components/board.html.twig
+++ b/web/templates/components/board.html.twig
@@ -13,7 +13,7 @@
 	{% for rowIndex, row in board %}
 		<tr>
 			{# Show the header of each row #}
-			<th>{{ rowName(rowIndex) }}</th>
+			<th>{{ getRowName(rowIndex) }}</th>
 
 			{% for columnIndex, cell in row %}
 				<td class="{{ inGreenTargetArea(rowIndex, columnIndex) ? "green-target" : (inRedTargetArea(rowIndex, columnIndex) ? "red-target") }}">
