Capitalize the first letter of Twig components.

--- a/web/templates/components/Board.html.twig
+++ b/web/templates/components/Board.html.twig
@@ -18,7 +18,7 @@
 			{% for columnIndex, cell in row %}
 				<td class="{{ inGreenTargetArea(rowIndex, columnIndex) ? "green-target" : (inRedTargetArea(rowIndex, columnIndex) ? "red-target") }}">
 					{% if cell > 0 %}
-						<twig:pawn player="{{ cell }}" />
+						<twig:Pawn player="{{ cell }}" />
 					{% endif %}
 				</td>
 			{% endfor %}
