--- a/web/templates/game/index.html.twig
+++ b/web/templates/game/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-	<twig:board board="{{ board }}" />
+	<twig:Board board="{{ board }}" />
 {% endblock %}
