--- a/web/templates/components/Pawn.html.twig
+++ b/web/templates/components/Pawn.html.twig
@@ -1,1 +1,1 @@
-<div class="{{ player == 1 ? "green" : (player == 2 ? "red" : "unknown") }} pawn"></div>
+<span class="{{ player == 1 ? "green" : (player == 2 ? "red" : "unknown") }} pawn"></span>
