Submit the form to build moves, add end turn API call and form when jumping, show errors.

--- a/web/templates/components/Board.html.twig
+++ b/web/templates/components/Board.html.twig
@@ -1,25 +1,27 @@
-<table id="game-board" class="game-board">
-	<tbody>
+<form id="game-board" method="POST" action="{{ isMoveStarted() ? path("move_continue") : path("move_start") }}">
+	<table class="game-board">
+		<tbody>
 
-	<tr>
-		<th></th>
-		{# Show the header of each column #}
-		{% for columnIndex in board[0]|keys %}
-			<th>{{ columnIndex + 1 }}</th>
-		{% endfor %}
-	</tr>
-
-	{# Render the game board content #}
-	{% for rowIndex, row in board %}
 		<tr>
-			{# Show the header of each row #}
-			<th>{{ getRowName(rowIndex) }}</th>
-
-			{% for columnIndex, cell in row %}
-				<twig:Cell cell="{{ cell }}" rowIndex="{{ rowIndex }}" columnIndex="{{ columnIndex }}" />
+			<th></th>
+			{# Show the header of each column #}
+			{% for columnIndex in board[0]|keys %}
+				<th>{{ columnIndex + 1 }}</th>
 			{% endfor %}
 		</tr>
-	{% endfor %}
 
-	</tbody>
-</table>
+		{# Render the game board content #}
+		{% for rowIndex, row in board %}
+			<tr>
+				{# Show the header of each row #}
+				<th>{{ getRowName(rowIndex) }}</th>
+
+				{% for columnIndex, cell in row %}
+					<twig:Cell cell="{{ cell }}" rowIndex="{{ rowIndex }}" columnIndex="{{ columnIndex }}" />
+				{% endfor %}
+			</tr>
+		{% endfor %}
+
+		</tbody>
+	</table>
+</form>
