--- a/web/public/chinese-checkers.css
+++ b/web/public/chinese-checkers.css
@@ -14,6 +14,15 @@
 	--board-red: #EA0A0A;
 
 	--board-cell-clickable-hover: rgba(0, 0, 0, 0.1);
+
+	--button-border: #CECECE;
+	--button-background: #EEEEEE;
+	--button-background-hover: #E6E6E6;
+
+	--flash-default-border: #CECECE;
+	--flash-default-background: #EEEEEE;
+	--flash-error-border: #cc8585;
+	--flash-error-background: #ffa5a5;
 }
 
 /* General page styles */
@@ -27,6 +36,47 @@ html, body
 	color: var(--foreground);
 
 	font-family: system-ui, sans-serif;
+}
+
+/* General layout */
+
+body > main, body > aside
+{
+	display: inline-block;
+	vertical-align: middle;
+	text-align: center;
+}
+body > aside
+{
+	width: 25em;
+	max-width: 90%;
+}
+
+/* Buttons */
+
+button
+{
+	transition: background 0.1s ease;
+	display: inline-block;
+
+	margin: 1em auto;
+	padding: 0.5em 1em;
+	border-radius: 0.5em;
+
+	border: solid var(--button-border) thin;
+	background: var(--button-background);
+
+	font-size: 1em;
+
+	cursor: pointer;
+}
+button:not(:disabled):hover
+{
+	background: var(--button-background-hover);
+}
+button:not(:disabled)
+{
+	cursor: pointer;
 }
 
 /* Game board component */
@@ -66,18 +116,14 @@ table.game-board td.red-target
 
 table.game-board td button
 {
-	transition: 0.1s ease background;
-
+	margin: auto;
 	width: 2.5em;
 	height: 2.5em;
 	padding: 0;
+	border-radius: 0;
 
 	border: none;
 	background: none;
-}
-table.game-board td button:not(:disabled)
-{
-	cursor: pointer;
 }
 table.game-board td button:not(:disabled):hover
 {
@@ -94,6 +140,7 @@ table.game-board td button:not(:disabled):hover
 	width: 1.66em;
 	height: 1.66em;
 	border-radius: 1.66em;
+	box-sizing: border-box;
 
 	background: var(--board-border);
 }
@@ -104,4 +151,47 @@ table.game-board td button:not(:disabled):hover
 .pawn.green
 {
 	background: var(--board-green);
+}
+
+.move-start .pawn
+{
+	border: solid var(--foreground) 2px;
+}
+
+/* Moves */
+
+ol.moves
+{
+	margin: auto;
+	padding: 0;
+}
+ol.moves > li
+{
+	display: inline-block;
+	margin: auto;
+	padding: 0;
+	list-style: none;
+}
+ol.moves > li:not(:last-of-type)::after
+{
+	content: ", ";
+}
+
+/* Flash */
+
+.flash > p
+{
+	padding: 0.5em 1em;
+	border-radius: 0.5em;
+
+	border: solid var(--flash-default-border) thin;
+	background: var(--flash-default-background);
+
+	text-align: center;
+}
+.flash > p.error
+{
+	border: solid var(--flash-error-border) thin;
+	background: var(--flash-error-background);
+	font-weight: 700;
 }
