--- a/web/templates/components/Cell.html.twig
+++ b/web/templates/components/Cell.html.twig
@@ -1,5 +1,9 @@
 <td class="{{ inGreenTargetArea(rowIndex, columnIndex) ? "green-target" : (inRedTargetArea(rowIndex, columnIndex) ? "red-target") }}">
-	<button {{ cell == 0 ? "disabled" }}>
+	<button {{ isMoveStartCell(rowIndex, columnIndex) ? 'class="move-start"' }}
+		      name="cell" value="{{ getCellName(rowIndex, columnIndex) }}"
+					{# Cells with pawns are clickable when the move is not started, #}
+					{# and cells without pawns are clickable when the move is started. #}
+		      {{ (isMoveStarted() ? cell != 0 : cell == 0) ? "disabled" }}>
 		{% if cell > 0 %}
 			<twig:Pawn player="{{ cell }}" />
 		{% endif %}
