--- a/web/public/chinese-checkers.css
+++ b/web/public/chinese-checkers.css
@@ -35,7 +35,8 @@ html, body
 	background: var(--background);
 	color: var(--foreground);
 
-	font-family: system-ui, sans-serif;
+	font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial, sans-serif;
+	font-weight: normal;
 }
 
 /* General layout */
