Improve game session names and simplify controller by using a response event subscriber.

--- a/web/templates/components/Board.html.twig
+++ b/web/templates/components/Board.html.twig
@@ -1,4 +1,4 @@
-<form id="game-board" method="POST" action="{{ isMoveStarted() ? path("move_continue") : path("move_start") }}">
+<form id="game-board" method="POST" action="{{ path("move") }}">
 	<table class="game-board">
 		<tbody>
 
