--- a/web/templates/game/index.html.twig
+++ b/web/templates/game/index.html.twig
@@ -2,9 +2,11 @@
 
 {% block body %}
 	<main>
-		<twig:Board board="{{ board }}" />
+		<twig:Board board="{{ board }}" winner="{{ winner }}" />
 	</main>
 	<aside>
+		<twig:Winner winner="{{ winner }}" />
+
 		<twig:Flash />
 		<twig:Turn />
 	</aside>
