Improve win message.

--- a/web/templates/components/Winner.html.twig
+++ b/web/templates/components/Winner.html.twig
@@ -1,6 +1,6 @@
 {% if winner %}
 	<div class="{{ winner == 1 ? "green" : "red" }} winner">
-		<p><strong>{{ winner == 1 ? "Green" : "Red" }}</strong> has won!</p>
+		<p><strong>{{ winner == 1 ? "Green" : "Red" }}</strong> won!</p>
 		<p>Well played!</p>
 	</div>
 {% endif %}
