--- a/web/templates/components/Cell.html.twig
+++ b/web/templates/components/Cell.html.twig
@@ -4,7 +4,8 @@
 					{# Cells with pawns are clickable when the move is not started, #}
 					{# and cells without pawns are clickable when the move is started. #}
 					{# Also disable cells when there is a winner. #}
-		      {{ winner or (isMoveStarted() ? cell != 0 : cell == 0) ? "disabled" }}>
+					{# Only enable cells of the current player. #}
+		      {{ winner or (isMoveStarted() ? cell != 0 : cell != currentPlayer) ? "disabled" }}>
 		{% if cell > 0 %}
 			<twig:Pawn player="{{ cell }}" />
 		{% endif %}
