--- a/web/templates/components/Board.html.twig
+++ b/web/templates/components/Board.html.twig
@@ -17,7 +17,9 @@
 				<th>{{ getRowName(rowIndex) }}</th>
 
 				{% for columnIndex, cell in row %}
-					<twig:Cell cell="{{ cell }}" rowIndex="{{ rowIndex }}" columnIndex="{{ columnIndex }}" winner="{{ winner }}" currentPlayer="{{ currentPlayer }}" />
+					<twig:Cell cell="{{ cell }}" rowIndex="{{ rowIndex }}" columnIndex="{{ columnIndex }}"
+										 winner="{{ winner }}" currentPlayer="{{ currentPlayer }}"
+										 canPlay="{{ canPlay }}" />
 				{% endfor %}
 			</tr>
 		{% endfor %}
