Force CSS update.

--- a/web/templates/base.html.twig
+++ b/web/templates/base.html.twig
@@ -5,7 +5,7 @@
 
 		<title>{% block title %}Chinese Checkers{% endblock %}</title>
 
-		<link rel="stylesheet" href="{{ asset("chinese-checkers.css") }}" type="text/css" />
+		<link rel="stylesheet" href="{{ asset("chinese-checkers.css?1") }}" type="text/css" />
 
 		{% block stylesheets %}
 		{% endblock %}
