Try to improve mobile experience.

--- a/web/templates/base.html.twig
+++ b/web/templates/base.html.twig
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<title>{% block title %}Chinese Checkers{% endblock %}</title>
 
-		<link rel="stylesheet" href="{{ asset("chinese-checkers.css?1") }}" type="text/css" />
+		<link rel="stylesheet" href="{{ asset("chinese-checkers.css?4") }}" type="text/css" />
 
 		{% block stylesheets %}
 		{% endblock %}
