--- a/web/public/chinese-checkers.css
+++ b/web/public/chinese-checkers.css
@@ -52,6 +52,7 @@ body
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
 	min-height: 100vh;
 }
 body > main, body > aside
@@ -114,10 +115,12 @@ label > input
 
 table.game-board
 {
-	margin: 6em;
+	margin: 3em 6em 0;
 	border-collapse: collapse;
 
 	transform: rotate(45deg);
+
+	font-size: 0.9em;
 }
 table.game-board th
 {
