--- a/web/templates/game/index.html.twig
+++ b/web/templates/game/index.html.twig
@@ -8,7 +8,7 @@
 	</main>
 	<aside>
 		<twig:Winner winner="{{ winner }}" />
-		<twig:CurrentPlayer currentPlayer="{{ currentPlayer }}" />
+		<twig:CurrentPlayer playerName="{{ currentPlayerName }}" currentPlayer="{{ currentPlayer }}" />
 
 		<twig:Flash />
 		<twig:Turn canPlay="{{ canPlay }}" gameId="{{ gameId }}" />
