--- a/web/templates/components/CurrentPlayer.html.twig
+++ b/web/templates/components/CurrentPlayer.html.twig
@@ -1,1 +1,3 @@
-<p class="{{ currentPlayer == 1 ? "green" : "red" }} current-player">{{ currentPlayer == 1 ? "Green" : "Red" }} to play</p>
+<p class="{{ currentPlayer == 1 ? "green" : "red" }} current-player">
+	<strong>{{ playerName }}</strong> ({{ currentPlayer == 1 ? "Green" : "Red" }}) to play
+</p>
