Increase join URL input width.

--- a/web/public/chinese-checkers.css
+++ b/web/public/chinese-checkers.css
@@ -263,6 +263,13 @@ ol.moves > li:not(:last-of-type)::after
 	color: var(--board-red);
 }
 
+/* Join page */
+
+#game-url
+{
+	width: 20em;
+}
+
 /* Homepage */
 
 main.home
