Use route names in templates.

--- a/web/templates/game/join.html.twig
+++ b/web/templates/game/join.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<main class="join">
-		<form method="POST" action="/join">
+		<form method="POST" action="{{ url("joinGame") }}">
 			<input type="hidden" name="game" value="{{ gameId }}" />
 
 			<label for="player-name">
