--- a/web/templates/game/new.html.twig
+++ b/web/templates/game/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<main class="new">
-		<form method="POST" action="/new">
+		<form method="POST" action="{{ url("newGame") }}">
 
 			<label for="player-name">
 				Enter your name
