--- a/web/app/styles/_common.less
+++ b/web/app/styles/_common.less
@@ -6,9 +6,17 @@ html, body
 body
 {
 	height: 100vh;
+
+	background: var(--background);
+	color: var(--foreground);
 }
 
 body, input, textarea, button
 {
 	font-family: var(--main-font);
+}
+
+a
+{
+	color: var(--primary);
 }
