--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -1,4 +1,7 @@
 @import "_fonts";
+@import "_colors";
 @import "_common";
+@import "_icons";
 
 @import "components/_app";
+@import "components/_menu";
