--- a/web/app/styles/components/_app.less
+++ b/web/app/styles/components/_app.less
@@ -1,9 +1,20 @@
 main.app
 {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	align-items: stretch;
 	justify-content: center;
 
 	width: 100%;
 	height: 100%;
+
+	> main
+	{
+		flex: 1;
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 }
