Move menu to the bottom and add page title.

--- a/web/app/styles/components/_menu.less
+++ b/web/app/styles/components/_menu.less
@@ -1,6 +1,6 @@
 nav.menu
 {
-	border-bottom: solid var(--gray) thin;
+	border-top: solid var(--gray) thin;
 	background: var(--background);
 
 	ul
@@ -28,7 +28,7 @@ nav.menu
 				padding: 1em;
 				width: fit-content;
 
-				border-bottom: solid transparent medium;
+				border-top: solid transparent medium;
 				color: var(--foreground);
 
 				text-decoration: none;
