--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -5,5 +5,10 @@
 	@gray: #A9A9A9; --gray: @gray;
 
 
-	@primary: #0062c3; --primary: @primary;
+	@primary: #0062C3; --primary: @primary;
+
+	@green: #1C820F; --green: @green;
+	@red: #C30000; --red: @red;
+	@vs-border: #bf620b; --vs-border: @vs-border;
+	@vs: #e7770e; --vs: @vs;
 }
