--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -4,5 +4,9 @@
 @import "_icons";
 
 @import "components/_app";
+@import "components/_card";
 @import "components/_header";
 @import "components/_menu";
+@import "components/_paragraph";
+
+@import "components/games/_game-card";
