Add game model, render game card as a link to spectate the game.

--- a/web/app/styles/components/_card.less
+++ b/web/app/styles/components/_card.less
@@ -1,7 +1,7 @@
 .card
 {
 	margin: 1em;
-	padding: 0.5em;
+	padding: 1em 0.5em;
 	border-radius: 1em;
 	box-shadow: 0 0 0.44em 0 rgba(0, 0, 0, 0.15);
 }
