Show a game view with a game board and the player to play.

--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -11,4 +11,7 @@
 	@red: #C30000; --red: @red;
 	@vs-border: #bf620b; --vs-border: @vs-border;
 	@vs: #e7770e; --vs: @vs;
+
+	@board-border: #545454; --board-border: @board-border;
+	@board-background: #F4F4F4; --board-background: @board-background;
 }
