--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -3,10 +3,15 @@
 @import "_common";
 @import "_icons";
 
+@import "views/_game-view";
+
 @import "components/_app";
 @import "components/_card";
 @import "components/_header";
 @import "components/_menu";
 @import "components/_paragraph";
 
+@import "components/games/_game-board";
 @import "components/games/_game-card";
+@import "components/games/_pawn";
+@import "components/games/_player-turn";
