Highlight target areas.

--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -14,4 +14,6 @@
 
 	@board-border: #545454; --board-border: @board-border;
 	@board-background: #F4F4F4; --board-background: @board-background;
+	@board-green-background: fade(@green, 25%); --board-green-background: @board-green-background;
+	@board-red-background: fade(@red, 25%); --board-red-background: @board-red-background;
 }
