Add button style, add not found view style.

--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -6,6 +6,7 @@
 
 
 	@primary: #0062C3; --primary: @primary;
+	@primary-darker: #0054A8; --primary-darker: @primary-darker;
 
 	@green: #1C820F; --green: @green;
 	@red: #C30000; --red: @red;
