--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -4,8 +4,10 @@
 @import "_icons";
 
 @import "views/_game-view";
+@import "views/_not-found-view";
 
 @import "components/_app";
+@import "components/_button";
 @import "components/_card";
 @import "components/_header";
 @import "components/_menu";
