Add lightgray and improve card style.

--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -3,6 +3,7 @@
 	@background: #FFFFFF; --background: @background;
 	@foreground: #141414; --foreground: @foreground;
 	@gray: #A9A9A9; --gray: @gray;
+	@lightgray: #BFBFBF; --lightgray: @lightgray;
 
 
 	@primary: #0062C3; --primary: @primary;
