--- a/web/app/styles/components/_card.less
+++ b/web/app/styles/components/_card.less
@@ -3,5 +3,6 @@
 	margin: 1em;
 	padding: 1em 0.5em;
 	border-radius: 1em;
-	box-shadow: 0 0 0.44em 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.15);
+	border: solid var(--lightgray) thin;
 }
