--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -10,6 +10,7 @@
 @import "components/_button";
 @import "components/_card";
 @import "components/_header";
+@import "components/_loader";
 @import "components/_menu";
 @import "components/_paragraph";
 
