--- a/web/app/styles/components/games/_pawn.less
+++ b/web/app/styles/components/games/_pawn.less
@@ -21,5 +21,5 @@
 		transform: scale(0.75);
 	}
 
-	box-shadow: inset 0.75em 0 0.75em 0 rgba(0, 0, 0, 0.44);
+	box-shadow: inset 0.75em 0 0.75em 0 rgba(0, 0, 0, 0.2), inset -1em 0 0.75em 0 rgba(255, 255, 255, 0.2);
 }
