Add local board, build a move with a visual overlay, add move actions bar.

--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -18,4 +18,6 @@
 	@board-background: #F4F4F4; --board-background: @board-background;
 	@board-green-background: fade(@green, 25%); --board-green-background: @board-green-background;
 	@board-red-background: fade(@red, 25%); --board-red-background: @board-red-background;
+
+	@board-cell-clickable-hover: rgba(0, 0, 0, 0.1); --board-cell-clickable-hover: @board-cell-clickable-hover;
 }
