--- a/web/app/styles/chinese-checkers.less
+++ b/web/app/styles/chinese-checkers.less
@@ -14,6 +14,9 @@
 @import "components/_menu";
 @import "components/_paragraph";
 
+@import "move/_move-actions-bar";
+@import "move/_move-overlay";
+
 @import "components/games/_game-board";
 @import "components/games/_game-card";
 @import "components/games/_pawn";
