--- a/web/app/styles/components/games/_game-board.less
+++ b/web/app/styles/components/games/_game-board.less
@@ -35,7 +35,7 @@ table.game-board
 			border: none;
 			background: none;
 
-			:not(:disabled):hover
+			&:not(:disabled):hover
 			{
 				background: var(--board-cell-clickable-hover);
 			}
