Improve button styles, highlight selected pawn, improve move action bar and cancel / submit buttons.

--- a/web/app/styles/components/_button.less
+++ b/web/app/styles/components/_button.less
@@ -19,4 +19,17 @@ button, a[role="button"]
 	{
 		transform: scale(0.9);
 	}
+
+	&:disabled
+	{
+		border-color: var(--disabled-button-border);
+		background: var(--disabled-button);
+		opacity: 0.75;
+	}
+
+	&.cancel, &.remove, &.delete, &.red
+	{
+		border-color: var(--red-button-border);
+		background: var(--red-button);
+	}
 }
