--- a/web/app/styles/_colors.less
+++ b/web/app/styles/_colors.less
@@ -1,21 +1,31 @@
 :root
 {
 	@background: #FFFFFF; --background: @background;
-	@foreground: #141414; --foreground: @foreground;
-	@gray: #A9A9A9; --gray: @gray;
-	@lightgray: #BFBFBF; --lightgray: @lightgray;
+	@background-darker: #F4F4F4; --background-darker: @background-darker;
 
+	@foreground: #141414; --foreground: @foreground;
+
+	@gray: #A9A9A9; --gray: @gray;
+	@light-gray: #BFBFBF; --light-gray: @light-gray;
+	@dark-gray: #545454; --dark-gray: @dark-gray;
 
 	@primary: #0062C3; --primary: @primary;
 	@primary-darker: #0054A8; --primary-darker: @primary-darker;
 
 	@green: #1C820F; --green: @green;
 	@red: #C30000; --red: @red;
+
 	@vs-border: #bf620b; --vs-border: @vs-border;
 	@vs: #e7770e; --vs: @vs;
 
-	@board-border: #545454; --board-border: @board-border;
-	@board-background: #F4F4F4; --board-background: @board-background;
+	@disabled-button: @dark-gray; --disabled-button: @disabled-button;
+	@disabled-button-border: darken(@dark-gray, 7.5%); --disabled-button-border: @disabled-button-border;
+
+	@red-button: @red; --red-button: @red-button;
+	@red-button-border: darken(@red, 7.5%); --red-button-border: @red-button-border;
+
+	@board-border: @dark-gray; --board-border: @board-border;
+	@board-background: @background-darker; --board-background: @board-background;
 	@board-green-background: fade(@green, 25%); --board-green-background: @board-green-background;
 	@board-red-background: fade(@red, 25%); --board-red-background: @board-red-background;
 
