--- a/web/app/styles/components/games/_pawn.less
+++ b/web/app/styles/components/games/_pawn.less
@@ -22,4 +22,13 @@
 	}
 
 	box-shadow: inset 0.75em 0 0.75em 0 rgba(0, 0, 0, 0.2), inset -1em 0 0.75em 0 rgba(255, 255, 255, 0.2);
+
+	&.selected
+	{
+		outline: solid var(--board-border) 2px;
+		outline-offset: 2px;
+
+		&.red { outline-color: var(--red); }
+		&.green { outline-color: var(--green); }
+	}
 }
