--- a/web/app/styles/move/_move-actions-bar.less
+++ b/web/app/styles/move/_move-actions-bar.less
@@ -18,4 +18,20 @@
 	{
 		margin: 0;
 	}
+
+	animation: fade-in 0.3s;
+}
+
+@keyframes fade-in
+{
+	from
+	{
+		opacity: 0;
+		transform: translateY(-0.5em);
+	}
+	to
+	{
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
