--- a/web/app/src/ui/Colors.css
+++ b/web/app/src/ui/Colors.css
@@ -15,9 +15,12 @@
 
 	--green: #1C820F;
 	--red: #C30000;
+	--orange: #BF620B;
 
-	--vs-border: #BF620B;
+	--vs-border: var(--orange);
 	--vs: #E7770E;
+
+	--warning: var(--orange);
 
 	--disabled-button: var(--dark-gray);
 	--disabled-button-border: #404040;
