--- a/web/app/src/ui/views/GameView.css
+++ b/web/app/src/ui/views/GameView.css
@@ -3,7 +3,9 @@ main.game
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
+
+	margin-top: 6em;
 
 	.player-turn
 	{
