--- a/web/app/src/ui/board/Pawn.css
+++ b/web/app/src/ui/board/Pawn.css
@@ -21,5 +21,6 @@
 		transform: scale(0.75);
 	}
 
-	box-shadow: inset 0.75em 0 0.75em 0 rgba(0, 0, 0, 0.2), inset -1em 0 0.75em 0 rgba(255, 255, 255, 0.2);
+	box-shadow: inset 1em 0 0.75em 0 rgba(255, 255, 255, 0.2), inset -0.75em 0 0.75em 0 rgba(0, 0, 0, 0.15), 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.33);
+	transform: translate(-0.05em, -0.05em);
 }
