--- a/web/app/src/ui/App.css
+++ b/web/app/src/ui/App.css
@@ -6,7 +6,9 @@ main.app
 	justify-content: center;
 
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+	padding-bottom: 4em;
+	box-sizing: border-box;
 
 	> main
 	{
