--- a/web/app/src/ui/Common.css
+++ b/web/app/src/ui/Common.css
@@ -30,3 +30,16 @@ p
 	}
 }
 
+@keyframes fade-in
+{
+	from
+	{
+		opacity: 0;
+		transform: translateY(-0.5em);
+	}
+	to
+	{
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
