Add a way to start a new local game.

--- a/web/app/src/ui/Button.css
+++ b/web/app/src/ui/Button.css
@@ -32,4 +32,9 @@ button, a[role="button"]
 		border-color: var(--red-button-border);
 		background: var(--red-button);
 	}
+
+	.icon
+	{
+		margin-right: 0.25em;
+	}
 }
