--- a/web/app/src/ui/board/Pawn.css
+++ b/web/app/src/ui/board/Pawn.css
@@ -10,7 +10,7 @@
 
 	background: var(--board-border);
 
-	box-shadow: inset 1em 0 0.75em 0 rgba(255, 255, 255, 0.2), inset -0.75em 0 0.75em 0 rgba(0, 0, 0, 0.15), 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.33);
+	box-shadow: inset 1em 0 0.75em 0 rgba(255, 255, 255, 0.2), inset -0.75em 0 0.75em 0 rgba(0, 0, 0, 0.15), 0 0.1em 0.2em rgba(0, 0, 0, 0.33);
 
 	&.red
 	{ background: var(--red); }
