--- a/web/app/src/ui/board/GameBoard.css
+++ b/web/app/src/ui/board/GameBoard.css
@@ -46,6 +46,20 @@ table.game-board
 			{
 				background: var(--board-cell-clickable-hover);
 			}
+
+			&::after
+			{ /* Prepare dark overlay when button is disabled. */
+				transition: background 0.2s ease;
+
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+
+				background: transparent;
+			}
 		}
 
 		.remove-move-part.icon
@@ -83,5 +97,10 @@ table.game-board
 
 			pointer-events: none;
 		}
+	}
+
+	&.moving button:disabled::after
+	{
+		background: rgba(0, 0, 0, 0.33);
 	}
 }
