Remove animated arrow when showing the last move.

--- a/web/app/src/ui/move/MoveOverlay.css
+++ b/web/app/src/ui/move/MoveOverlay.css
@@ -34,11 +34,13 @@
 	&.green
 	{
 		background: linear-gradient(90deg, transparent, var(--board-green-background), transparent);
+		> .icon { display: none; }
 	}
 
 	&.red
 	{
 		background: linear-gradient(90deg, transparent, var(--board-red-background), transparent);
+		> .icon { display: none; }
 	}
 }
 
